--- a/2023_fall/lec04/lec04_notebook.ipynb
+++ b/2023_fall/lec04/lec04_notebook.ipynb
@@ -70,6 +70,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "710ed6a1",
+   "metadata": {},
+   "source": [
+    "### 1.2 Use Dictionary Methods\n",
+    "\n",
+    "One of the most useful things to do with a dictionary is to iterate over its elements.  Here are the three iterators:\n",
+    "\n",
+    "* `.keys()` gives you an iterator over the dictionary's keys\n",
+    "* `.values()` gives you an iterator over the dictionary's values\n",
+    "* `.items()` gives you an iterator over (key, value) tuples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "287bdddc",
@@ -90,20 +104,6 @@
     "\n",
     "#print(dict1[0])\n",
     "print(dict1[\"some key\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "710ed6a1",
-   "metadata": {},
-   "source": [
-    "### 1.2 Use Dictionary Methods\n",
-    "\n",
-    "One of the most useful things to do with a dictionary is to iterate over its elements.  Here are the three iterators:\n",
-    "\n",
-    "* `.keys()` gives you an iterator over the dictionary's keys\n",
-    "* `.values()` gives you an iterator over the dictionary's values\n",
-    "* `.items()` gives you an iterator over (key, value) tuples"
    ]
   },
   {
@@ -204,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type a string\n",
-      "You typed \n"
+      "Please type a stringhello\n",
+      "You typed hello\n"
      ]
     }
    ],
@@ -303,9 +303,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type something:   \n",
+      "Please type something:   cat\n",
       "\n",
-      "You typed \n"
+      "You typed cat\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type something:\n"
+      "Please type something:hello\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "hello\n"
      ]
     }
    ],
@@ -464,7 +464,9 @@
       "list_to_dict(input_list)\n",
       "    This function should return a dictionary in which each element of \n",
       "    `input_list` is a value, and the corresponding key is the numerical \n",
-      "    index of that element in `input_list`.\n",
+      "    index of that element in `input_list`. \n",
+      "    \n",
+      "    Here is some extra text.\n",
       "\n"
      ]
     }
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "79abae8f",
    "metadata": {},
    "outputs": [
@@ -501,9 +503,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n",
-      "None\n"
+      "{0: 1, 1: 3.14, 2: 'hello', 3: True}\n",
+      "{0: 'a', 1: 'a', 2: 'a'}\n",
+      "{}\n"
      ]
     }
    ],
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "f92915b6",
    "metadata": {},
    "outputs": [
@@ -540,67 +542,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EF\n",
-      "======================================================================\n",
-      "ERROR: test_list_to_dict_output (grade.Test)\n",
+      "..\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 12, in test_list_to_dict_output\n",
-      "    self.assertEqual(len(a), 3, \"list_to_dict, given a list of length 3, returns a dictionary with %d entries: %s\"%(len(a), str(a)))\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
+      "Ran 2 tests in 0.001s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_list_to_dict_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 8, in test_list_to_dict_type\n",
-      "    self.assertIs(type(a), type({}), \"list_to_dict([]) should return a %s but it returns a %s\"%(type({}),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'dict'> : list_to_dict([]) should return a <class 'dict'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
-      "\n",
-      "FAILED (failures=1, errors=1)\n",
-      "EF\n",
-      "======================================================================\n",
-      "ERROR: test_list_to_dict_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 12, in test_list_to_dict_output\n",
-      "    self.assertEqual(len(a), 3, \"list_to_dict, given a list of length 3, returns a dictionary with %d entries: %s\"%(len(a), str(a)))\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_list_to_dict_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py\", line 8, in test_list_to_dict_type\n",
-      "    self.assertIs(type(a), type({}), \"list_to_dict([]) should return a %s but it returns a %s\"%(type({}),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'dict'> : list_to_dict([]) should return a <class 'dict'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.002s\n",
-      "\n",
-      "FAILED (failures=1, errors=1)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 2 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 2 tests run\n",
-      "Score: 0%\n"
+      "2 successes out of 2 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec04/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\ROG\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec04\\\\grade.py'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,8 +575,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "0051ff27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 1, 1: 3.14, 2: 'hello', 3: True}\n",
+      "{0: 'a', 1: 'a', 2: 'a'}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def list_to_dict(input_list):\n",
+    "    \"\"\"\n",
+    "    This function should return a dictionary in which each element of \n",
+    "    `input_list` is a value, and the corresponding key is the numerical \n",
+    "    index of that element in `input_list`.\n",
+    "    \"\"\"\n",
+    "    result_dict = {} \n",
+    "    for index, value in enumerate(input_list):\n",
+    "        result_dict[index] = value  \n",
+    "    return result_dict\n",
+    "\n",
+    "\n",
+    "example_list1 = [1, 3.14, \"hello\", True]\n",
+    "example_list2 = [\"a\", \"a\", \"a\"]\n",
+    "example_list3 = []\n",
+    "\n",
+    "result1 = list_to_dict(example_list1)\n",
+    "result2 = list_to_dict(example_list2)\n",
+    "result3 = list_to_dict(example_list3)\n",
+    "\n",
+    "print(result1) \n",
+    "print(result2)  \n",
+    "print(result3) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a4b0f154",
+   "id": "95dcf635",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -635,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
